# RLD

./: .gitignore  demo.docx  main.py  pyproject.toml  readme.md  setup.py  test.csv
.github/workflows/: codeql-analysis.yml  python-app.yml
